Add Route for getting and changing user info
